Fix population counter zero‑value loading issue and align select boxes in query builder (#189)
This PR resolves an issue with the population counter UI and includes a
very minor CSS alignment fix in the query builder.

### Fixed
* Ensured that the population counter no longer remains stuck in a
loading animation when the value is exactly zero. Fixes #169
* Adjusted a minor CSS alignment issue with select boxes in the cohort
query builder.

--- a/client/src/assets/styles/cohorts/_cohort-query-builder.scss
+++ b/client/src/assets/styles/cohorts/_cohort-query-builder.scss
@@ -333,5 +333,12 @@ onconova-cohort-query-builder {
             margin-left: -0.75rem;
             margin-right: -0.5rem;
         }
+        & .p-inputwrapper {
+           height: 100%;
+        }
+        & .p-select {
+           height: 100%;
+           margin: auto;
+        }
     }
 }
